@@ -24,26 +24,27 @@ public class EndringHøySatsScenarioer {
         var tjuvefemårsdag = fødselsdato.plusYears(25);
         var fom = tjuvefemårsdag.with(TemporalAdjusters.firstDayOfMonth()).minusMonths(3);
 
-        var programPeriode = new LocalDateInterval(fom, fom.plusWeeks(52).minusDays(1));
+        var fagsakPeriode = new LocalDateInterval(fom, fom.plusWeeks(52).minusDays(1));
 
         var satser = new LocalDateTimeline<>(List.of(
-            new LocalDateSegment<>(programPeriode.getFomDato(), tjuvefemårsdag.minusDays(1), BrevScenarioerUtils.lavSatsBuilder(fom).build()),
-            new LocalDateSegment<>(tjuvefemårsdag, programPeriode.getTomDato(), BrevScenarioerUtils.høySatsBuilder(fom).build())
+            new LocalDateSegment<>(fagsakPeriode.getFomDato(), tjuvefemårsdag.minusDays(1), BrevScenarioerUtils.lavSatsBuilder(fom).build()),
+            new LocalDateSegment<>(tjuvefemårsdag, fagsakPeriode.getTomDato(), BrevScenarioerUtils.høySatsBuilder(fom).build())
         ));
 
-        var programPerioder = List.of(new UngdomsprogramPeriode(programPeriode.getFomDato(), programPeriode.getTomDato()));
+        var programPerioder = List.of(new UngdomsprogramPeriode(fagsakPeriode.getFomDato(), LocalDateInterval.TIDENES_ENDE));
 
         return new UngTestScenario(
             BrevScenarioerUtils.DEFAULT_NAVN,
             programPerioder,
             satser,
-            BrevScenarioerUtils.uttaksPerioder(programPeriode),
+            BrevScenarioerUtils.uttaksPerioder(fagsakPeriode),
             BrevScenarioerUtils.tilkjentYtelsePerioder(satser, new LocalDateInterval(fom, fom.plusMonths(1).minusDays(1))),
-            new LocalDateTimeline<>(programPeriode, Utfall.OPPFYLT),
-            new LocalDateTimeline<>(programPeriode, Utfall.OPPFYLT),
+            new LocalDateTimeline<>(fagsakPeriode, Utfall.OPPFYLT),
+            new LocalDateTimeline<>(fagsakPeriode, Utfall.OPPFYLT),
             fødselsdato,
-            List.of(programPeriode.getFomDato()),
-            Set.of(new Trigger(BehandlingÅrsakType.RE_TRIGGER_BEREGNING_HØY_SATS, DatoIntervallEntitet.fra(tjuvefemårsdag, programPeriode.getTomDato()))), Collections.emptyList(), null, null);
+            List.of(fagsakPeriode.getFomDato()),
+            Set.of(new Trigger(BehandlingÅrsakType.RE_TRIGGER_BEREGNING_HØY_SATS, DatoIntervallEntitet.fra(tjuvefemårsdag, fagsakPeriode.getTomDato()))), Collections.emptyList(),
+            null, null, null, false);
     }
 
     /**
@@ -53,28 +54,28 @@ public class EndringHøySatsScenarioer {
         var tjuvefemårsdag = fødselsdato.plusYears(25);
         var fom = tjuvefemårsdag.with(TemporalAdjusters.firstDayOfMonth()).minusMonths(3);
 
-        var programPeriode = new LocalDateInterval(fom, fom.plusWeeks(52).minusDays(1));
+        var fagsakPeriode = new LocalDateInterval(fom, fom.plusWeeks(52).minusDays(1));
 
         var satser = new LocalDateTimeline<>(List.of(
-            new LocalDateSegment<>(programPeriode.getFomDato(), tjuvefemårsdag.minusDays(1), BrevScenarioerUtils.lavSatsMedBarnBuilder(fom, 2).build()),
-            new LocalDateSegment<>(tjuvefemårsdag, programPeriode.getTomDato(), BrevScenarioerUtils.høySatsBuilderMedBarn(tjuvefemårsdag, 2).build())
+            new LocalDateSegment<>(fagsakPeriode.getFomDato(), tjuvefemårsdag.minusDays(1), BrevScenarioerUtils.lavSatsMedBarnBuilder(fom, 2).build()),
+            new LocalDateSegment<>(tjuvefemårsdag, fagsakPeriode.getTomDato(), BrevScenarioerUtils.høySatsBuilderMedBarn(tjuvefemårsdag, 2).build())
         ));
 
-        var programPerioder = List.of(new UngdomsprogramPeriode(programPeriode.getFomDato(), programPeriode.getTomDato()));
+        var programPerioder = List.of(new UngdomsprogramPeriode(fagsakPeriode.getFomDato(), LocalDateInterval.TIDENES_ENDE));
 
         return new UngTestScenario(
             BrevScenarioerUtils.DEFAULT_NAVN,
             programPerioder,
             satser,
-            BrevScenarioerUtils.uttaksPerioder(programPeriode),
+            BrevScenarioerUtils.uttaksPerioder(fagsakPeriode),
             BrevScenarioerUtils.tilkjentYtelsePerioder(satser, new LocalDateInterval(fom, fom.plusMonths(1).minusDays(1))),
-            new LocalDateTimeline<>(programPeriode, Utfall.OPPFYLT),
-            new LocalDateTimeline<>(programPeriode, Utfall.OPPFYLT),
+            new LocalDateTimeline<>(fagsakPeriode, Utfall.OPPFYLT),
+            new LocalDateTimeline<>(fagsakPeriode, Utfall.OPPFYLT),
             fødselsdato,
-            List.of(programPeriode.getFomDato()),
-            Set.of(new Trigger(BehandlingÅrsakType.RE_TRIGGER_BEREGNING_HØY_SATS, DatoIntervallEntitet.fra(tjuvefemårsdag, programPeriode.getTomDato()))),
+            List.of(fagsakPeriode.getFomDato()),
+            Set.of(new Trigger(BehandlingÅrsakType.RE_TRIGGER_BEREGNING_HØY_SATS, DatoIntervallEntitet.fra(tjuvefemårsdag, fagsakPeriode.getTomDato()))),
                 List.of(
                 BrevScenarioerUtils.lagBarn(fom.minusYears(5))
-            ), null, null);
+            ), null, null, null, false);
     }
 }
